[package]
name = "wallet-piccoro"
version = "0.1.0"
edition = "2024"



[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre  = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] }



[profile.dev]
debug = 0       # PDB作らない
incremental = false

[profile.release]
debug = 0

