[dependencies]
tauri = { version = "2", features = ["tray-icon", "notification"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-rustls-tls"] }
anyhow = "1"
